--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,13 @@
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.16.Final</version>
+            <version>5.0.0.Alpha2</version>
         </dependency>
+
 
     </dependencies>
 
